store address shows above items; fixed store items width on small screens

--- a/qwik-marketplace/src/components/modal/modal.css
+++ b/qwik-marketplace/src/components/modal/modal.css
@@ -54,18 +54,10 @@
 	line-height: 1.75rem;
 	width: var(--height);
 	height: var(--height);
+	flex-shrink: 0;
 
 }
 
-.header {
-	margin-left: auto;
-	margin-right: auto;
-	padding: 1rem var(--height) 1rem 0;
-	font-size: min(1.5rem, max(5vw, 18px));
-	line-height: 1.75rem;
-	color: rgb(55 65 81);
-	max-width: 100%;
-}
 
 
 
